# jaguar_experiments

./: CMakeLists.txt  package.xml
config/: 2D_localization.yaml  3D_indoor_localization.yaml  3D_outdoor_localization.yaml  cmd_params.yaml  compare.yaml
launch/: comparison.launch  exp_control.launch  reset_localization.launch  robot_pose_ekf.launch  velocity.launch
src/: change_pose_x.cpp  cmd_vel_pub.cpp  compare.cpp  maxvalues.py  rospub.py  txtwriter.py
